--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "homepage": "https://github.com/zhang-hongwei/webpack-s#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^2.0.1",
+    "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
