--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/zhang-hongwei/webpack-s#readme",
   "devDependencies": {
     "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-decorators": "^7.4.0",
-    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-syntax-decorators": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-react": "^7.8.3",
     "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^2.0.1",
@@ -45,14 +47,17 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.8.7",
     "@babel/runtime": "^7.4.3",
     "axios": "^0.18.0",
+    "babel-plugin-react": "^1.0.0",
     "echarts": "^4.2.1",
     "element-ui": "^2.7.2",
     "expose-loader": "^0.7.5",
     "jquery": "^3.4.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "tapable": "^1.1.3",
     "vue": "^2.6.10",
     "vuex": "^3.1.0"
   }
